--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         /* Header with Logo */
         header {
             background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), 
-                        url('https://images.unsplash.com/photo-1605100804763-247f67b3557e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+                        url('logo.png');
             background-size: cover;
             color: white;
             padding: 1rem 0 3rem;
@@ -123,7 +123,7 @@
     <header>
         <div class="logo-container">
             <!-- Replace with your actual logo file -->
-            <img src="YOUR-LOGO-FILE.png" alt="BGC Constructii Logo" class="logo">
+            <img src="logo.png" alt="BGC Constructii Logo" class="logo">
         </div>
  
         <div class="hero-content">
