--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         /* Header with Logo */
         header {
             background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), 
-                        url('logo.png');
+                        url('1.jpg');
             background-size: cover;
             color: white;
             padding: 1rem 0 3rem;
@@ -42,7 +42,7 @@
         }
  
         .logo {
-            height: 60px; /* Default size */
+            height: 110px; /* Default size */
             transition: all 0.3s ease;
         }
         .logo:hover {
@@ -138,7 +138,7 @@
     <!-- Rest of your existing HTML remains the same -->
     <section id="services">
         <div class="container">
-            <h2>Servicii noastre</h2>
+            <h2>Serviciile noastre</h2>
             <div class="service-grid">
                 <div class="service-card">
                     <h3>Transport beton</h3>
@@ -190,7 +190,7 @@
  
     <footer>
         <div class="container">
-            <p>&copy; 2023 BGC Constructii. Toate drepturile rezervate.</p>
+            <p>&copy; 2024 BGC Constructii. Toate drepturile rezervate.</p>
         </div>
     </footer>
 </body>
