--- a/index.html
+++ b/index.html
@@ -24,15 +24,31 @@
             margin: 0 auto;
         }
  
-        /* Header with Image */
+        /* Header with Background Image */
         header {
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
                         url('1.jpg');
             background-size: cover;
             color: white;
             padding: 1rem 0 3rem;
             position: relative;
         }
+ 
+        .logo-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 1rem;
+        }
+ 
+        .logo {
+            height: 120px; /* Default size */
+            transition: all 0.3s ease;
+        }
+        .logo:hover {
+            transform: scale(1.05);
+        }
+ 
         /* Hero content positioning */
         .hero-content {
             text-align: center;
@@ -44,6 +60,7 @@
             margin-bottom: 1rem;
         }
  
+        /* Rest of your existing CSS remains the same */
         .btn {
             display: inline-block;
             background: var(--primary);
@@ -93,7 +110,7 @@
         /* Mobile responsiveness for logo */
         @media (max-width: 768px) {
             .logo {
-                height: 60px; /* Slightly smaller on mobile */
+                height: 50px; /* Slightly smaller on mobile */
             }
             header h1 {
                 font-size: 2rem;
@@ -102,12 +119,16 @@
     </style>
 </head>
 <body>
-    <div class="header-banner">
+
+<div class="header-banner">
   <img src="logo.png" alt="BGC Logo" class="logo">
  
   <div class="dropdown">
-    <!-- Changed to a clickable div instead of checkbox -->
-    <div class="menu-btn">≡</div>
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-btn">
+      <span class="menu-icon">≡</span>
+    </label>
+ 
     <div class="dropdown-options">
       <a href="#about">Despre Noi</a>
       <a href="#services">Servicii</a>
@@ -117,7 +138,7 @@
 </div>
  
 <style>
-  
+  /* Banner Styles */
   .header-banner {
     background: white;
     padding: 15px;
@@ -125,32 +146,38 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    position: relative;
+    z-index: 100;
   }
  
   .logo {
-    height: 120px;
+    height: 110px;
     width: auto;
   }
  
+  /* Mobile-Friendly Menu Button */
   .dropdown {
     position: relative;
-    display: inline-block;
+  }
+ 
+  #menu-toggle {
+    display: none;
   }
  
   .menu-btn {
-    background: #e74c3c;
-    color: white;
-    border: none;
+    display: block;
     width: 40px;
     height: 40px;
+    background: #e74c3c;
+    color: white;
     border-radius: 50%;
-    font-size: 20px;
+    text-align: center;
+    line-height: 40px;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    user-select: none;
   }
  
+  /* Dropdown Menu */
   .dropdown-options {
     display: none;
     position: absolute;
@@ -159,11 +186,11 @@
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     border-radius: 4px;
     min-width: 150px;
-    z-index: 100;
+    margin-top: 5px;
   }
  
-  /* Show dropdown when parent is hovered */
-  .dropdown:hover .dropdown-options {
+  /* Show menu when checkbox is checked */
+  #menu-toggle:checked ~ .dropdown-options {
     display: block;
   }
  
@@ -178,8 +205,10 @@
     background: #f5f5f5;
   }
 </style>
-    <!-- Header with Image -->
+
+    <!-- Header with background image -->
     <header>
+        
         <div class="hero-content">
             <div class="container">
                 <h1>Cu BGC, construcția perfectă devine realitate!</h1>
@@ -244,7 +273,7 @@
  
     <footer>
         <div class="container">
-            <p>&copy; 2024 BGC Constructii. Toate drepturile rezervate.</p>
+            <p>&copy; 2024 BGC. Toate drepturile rezervate.</p>
         </div>
     </footer>
 </body>
