--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <h3>Contact Rapid</h3>
                     <p>Email: contact@bgcconstructii.ro</p>
                     <p>Telefon: +40 123 456 789</p>
-                    <p>Adresă: Strada Constructorilor 123, București</p>
+                    <p>Adresă: Strada Constructorilor 123</p>
                 </div>
                 
                 <div class="footer-section">
