--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
                 <img src="images/logo.png" alt="BGC Logo" class="logo">
             </a>
             
-            <button class="menu-btn" aria-label="Toggle Menu">
+            <button class="menu-btn" aria-label="Deschide Meniu">
                 <span>☰</span>
             </button>
             
             <nav class="nav-links">
+                <button class="close-menu-btn" aria-label="Închide Meniu">&times;</button>
                 <a href="#about">Despre Noi</a>
                 <div class="dropdown">
-                    <a href="#services">Servicii <i class="fa fa-caret-down"></i></a>
+                    <a href="#services" class="dropdown-toggle">Servicii <i class="fa fa-caret-down"></i></a>
                     <div class="dropdown-content">
                         <a href="#transport">Transport Beton</a>
                         <a href="#pompare">Pompare Beton</a>
