--- a/index.html
+++ b/index.html
@@ -206,10 +206,9 @@
                 
                 <div class="footer-section">
                     <h3>Contact Rapid</h3>
-                    <div class="footer-contact-item"><i class="fa fa-location"></i> Râmnicu Vâlcea</div>
                     <div class="footer-contact-item"><i class="fa fa-envelope"></i> contact@bgconstructii.ro</div>
                     <div class="footer-contact-item"><i class="fa fa-phone"></i> +40 123 456 789</div>
-                    <div class="footer-contact-item"><i class="fa fa-map-marker-alt"></i> Strada Constructorilor 123</div>
+                    <div class="footer-contact-item"><i class="fa fa-map-marker-alt"></i> Râmnicu Vâlcea, Strada Constructorilor 123</div>
                 </div>
                 
                 <div class="footer-section">
