--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     };
     </script>
     <!-- Simple Lightbox Overlay -->
-    <div id="lightbox-overlay" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(30,41,59,0.85); z-index:3000; align-items:center; justify-content:center;">
+    <div id="lightbox-overlay" style="position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(30,41,59,0.85); z-index:3000; align-items:center; justify-content:center;">
         <span id="lightbox-close" style="position:absolute; top:30px; right:40px; color:#fff; font-size:2.5rem; cursor:pointer; z-index:3100;">&times;</span>
         <img id="lightbox-img" src="" alt="Imagine mărită" style="max-width:90vw; max-height:80vh; border-radius:10px; box-shadow:0 4px 32px rgba(0,0,0,0.25);">
     </div>
