--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div style="flex: 1 1 300px; min-width: 250px; text-align: center;">
                     <!-- Team picture placeholder -->
                     <img src="images/team-placeholder.jpg" alt="Echipa BGC" style="max-width: 320px; width: 100%; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.08);">
-                    <div style="margin-top: 0.5rem; color: #888; font-size: 0.95rem;">Echipa BGC</div>
+                    <div style="margin-top: 0.5rem; color: #888; font-size: 0.95rem;"></div>
                 </div>
             </div>
         </div>
