--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <a href="#gallery">Galerie</a>
                 <a href="#contact">Contact</a>
                 <div class="mobile-contact-info">
-                    <div><i class="fa fa-phone"></i> <a href="tel:+40123456789">+40 123 456 789</a></div>
-                    <div><i class="fa fa-map-marker-alt"></i> Râmnicu Vâlcea, Strada Constructorilor 123</div>
-                    <div><i class="fa fa-envelope"></i> <a href="mailto:contact@bgconstructii.ro">contact@bgconstructii.ro</a></div>
+                    <div><i class="fa fa-phone"></i> <a href="tel:+40756437350">+40 756 437 350</a></div>
+                    <div><i class="fa fa-map-marker-alt"></i> Râmnicu Vâlcea</div>
+                    <div><i class="fa fa-envelope"></i> <a href="mailto:office.bgcbuilding@gmail.com">office.bgcbuilding@gmail.com</a></div>
                 </div>
             </nav>
         </div>
