--- a/cookies-policy.html
+++ b/cookies-policy.html
@@ -24,9 +24,9 @@
         <h2>Gestionarea cookie-urilor</h2>
         <p>Puteți șterge sau bloca cookie-urile din setările browserului. Totuși, blocarea anumitor cookie-uri poate afecta funcționalitatea site-ului.</p>
         <h2>Drepturile utilizatorului</h2>
-        <p>Conform legislației în vigoare, aveți dreptul de a accesa, rectifica sau șterge datele personale colectate prin cookie-uri. Pentru detalii, contactați-ne la <a href="mailto:contact@bgcconstructii.ro">contact@bgcconstructii.ro</a>.</p>
-        <h2>Contact</h2>
-        <p>Pentru întrebări legate de politica de cookies, vă rugăm să ne contactați la <a href="mailto:contact@bgcconstructii.ro">contact@bgcconstructii.ro</a>.</p>
-    </div>
+        <p>Conform legislației în vigoare, aveți dreptul de a accesa, rectifica sau șterge datele personale colectate prin cookie-uri. Pentru detalii, contactați-ne la <a href="mailto:office.bgcbuilding@gmail.com">office.bgcbuilding@gmail.com</a>.</p>
+      <h2>Contact</h2>
+         <p>Pentru întrebări legate de politica de cookies, vă rugăm să ne contactați la <a href="mailto:office.bgcbuilding@gmail.com">office.bgcbuilding@gmail.com</a>.</p>
+  </div>
 </body>
 </html> 
